<resources>
    <string name="app_name">SmartPass</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_adhaar">Enter Adhaar \'s last four digits</string>
    <string name="select_pass">Select Pass Type</string>
    <string name="pick_dob">Pick BirthDate</string>
    <string name="age">Age</string>
    <string name="pay">Pay</string>
    <string name="select_language">Select Language</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>